--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,17 @@
-Content from pyproject.toml
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "awssec"
+version = "0.1.0"
+description = "Practical AWS Security Toolkit - read only checks with JSON and SARIF output"
+readme = "README.md"
+requires-python = ">=3.9"
+dependencies = ["boto3>=1.34.0", "botocore>=1.34.0", "tabulate>=0.9.0"]
+
+[project.optional-dependencies]
+dev = ["pytest>=8.0.0", "moto[s3,iam,organizations]>=5.0.0", "ruff>=0.5.0", "mypy>=1.10.0", "types-tabulate", "pip-audit>=2.7.0", "bandit>=1.7.8", "pytest-cov>=5.0.0"]
+
+[project.scripts]
+awssec = "awssec.cli:main"
