--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+# Disclaimer: AS-IS, no warranty. Read-only security checks. Test in sandbox first.
 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
@@ -5,7 +6,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "awssec"
 version = "0.1.0"
-description = "Practical AWS Security Toolkit - read only checks with JSON and SARIF output"
+description = "Practical AWS Security Toolkit - read-only checks with JSON and SARIF output"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = ["boto3>=1.34.0", "botocore>=1.34.0", "tabulate>=0.9.0"]
